fix applying hermes on all platforms for generated project